GP-5545-5600: Fixing headless regression